--- a/Assignments/StevenCanoy/2c.6/index.html
+++ b/Assignments/StevenCanoy/2c.6/index.html
@@ -8,7 +8,14 @@
 
   <body>
     <script src="sketch.js"></script>
-    <button type="button" id="randButton">Click to Randomize</button>
+
+    <div class="" id="canvasDiv">
+
+    </div>
+    <div class="" id="controlsDiv">
+      <button type="button" id="randButton">Click to Randomize</button>
+
+    </div>
   
 
 </body></html>
