--- a/Assignments/StevenCanoy/2c.7/index.html
+++ b/Assignments/StevenCanoy/2c.7/index.html
@@ -9,13 +9,18 @@
   <body>
     <script src="sketch.js"></script>
 
-    <div class="" id="canvasDiv">
+    <div class="row">
+      <div class="column" id="canvasDiv">
+
+      </div>
+      <div class="column" id="controlsDiv">
+        <button type="button" id="randButton">Click to Randomize</button>
+  
+      </div>
 
     </div>
-    <div class="" id="controlsDiv">
-      <button type="button" id="randButton">Click to Randomize</button>
 
-    </div>
+    
   
 
 </body></html>
