--- a/Assignments/StevenCanoy/2c.8/index.html
+++ b/Assignments/StevenCanoy/2c.8/index.html
@@ -14,8 +14,12 @@
 
       </div>
       <div class="column" id="controlsDiv">
+        <div class="" id="inputFields">
+          
+        </div>
+
+        <button type="addMoreButton" id="add more">Click to Randomize</button>
         <button type="button" id="randButton">Click to Randomize</button>
-  
       </div>
 
     </div>
