--- a/Assignments/StevenCanoy/2c.8/index.html
+++ b/Assignments/StevenCanoy/2c.8/index.html
@@ -18,7 +18,7 @@
           
         </div>
 
-        <button type="addMoreButton" id="add more">Click to Randomize</button>
+        <button type="addMoreButton">add more</button>
         <button type="button" id="randButton">Click to Randomize</button>
       </div>
 
