--- a/Assignments/StevenCanoy/2c.10/index.html
+++ b/Assignments/StevenCanoy/2c.10/index.html
@@ -18,8 +18,8 @@
           
         </div>
 
-        <button type="addMoreButton">add more</button>
-        <button type="button" id="randButton">Click to Randomize</button>
+        <button type="addMoreButton" id="addMoreButton">add more</button>
+        <button type="button" id="randButton" class="randomizerButton">Click to Randomize</button>
       </div>
 
     </div>
