--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kenny Nguyen - Randomizer</title>
 </head>
-	<link rel="stylesheet" type="text/css" href="designer.css">
+	<link rel="stylesheet" type="text/css" href="randomizerdesigner.css">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Cabin|Dokdo|Josefin+Sans|Lobster|Open+Sans+Condensed:300|Oswald|Ubuntu|Underdog" rel="stylesheet">
 
 <p class="item-1">This is your last chance. After this, there is no turning back.</p>
