--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="randomizerdesigner.css">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Cabin|Dokdo|Josefin+Sans|Lobster|Open+Sans+Condensed:300|Oswald|Ubuntu|Underdog" rel="stylesheet">
 
-<p class="item-1">This is your last chance. After this, there is no turning back.</p>
+<p class="item-1">Philadephia 76ers</p>
 
-<p class="item-2">You take the blue pill - the story ends, you wake up in your bed and believe whatever you want to believe.</p>
+<p class="item-2">Milwaukee Bucks</p>
 
-<p class="item-3">You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole goes.</p>
+<p class="item-3">Chicago Bulls</p>
 
 </div>
 
