--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="randomizerdesigner.css">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Cabin|Dokdo|Josefin+Sans|Lobster|Open+Sans+Condensed:300|Oswald|Ubuntu|Underdog" rel="stylesheet">
 
-<p class="item-1">Philadephia 76ers</p>
+<p class="item-1">Philadephia 76ers
+	<img src=/Images/76ers.png></p>
 
 <p class="item-2">Milwaukee Bucks</p>
 
