--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -9,7 +9,8 @@
 	<div class="item-1">
 
 		<p>Philadephia 76ers</p>
-		<img src="/Images/76ers.png">
+			<br>
+		<img src="/Images/76ers.png" width="50%" height="auto">
 
 	</div>
 
