--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -10,7 +10,7 @@
 
 		<p>Philadephia 76ers</p>
 			<br>
-		<img src="/Images/squidgamecard.jpg" width="50%" height="auto">
+		<img src="/RImages/76ers.png" width="50%" height="auto">
 
 	</div>
 
