--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -4,7 +4,7 @@
 	<title>Kenny Nguyen - Randomizer</title>
 </head>
 	<link rel="stylesheet" type="text/css" href="randomizerdesigner.css">
-	<link rel="stylesheet" type="text/css" href="randomizerdesigner.js">
+	<link rel="stylesheet" type="text/css" href="randomizer.js">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Cabin|Dokdo|Josefin+Sans|Lobster|Open+Sans+Condensed:300|Oswald|Ubuntu|Underdog" rel="stylesheet">
 
 	<div class="slider" id="main-slider"><!-- outermost container element -->
