--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -4,16 +4,13 @@
 	<title>Kenny Nguyen - Randomizer</title>
 </head>
 	<link rel="stylesheet" type="text/css" href="randomizerdesigner.css">
-	<link rel="stylesheet" type="text/css" href="randomizer.js">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Cabin|Dokdo|Josefin+Sans|Lobster|Open+Sans+Condensed:300|Oswald|Ubuntu|Underdog" rel="stylesheet">
 
-	<div class="slider" id="main-slider"><!-- outermost container element -->
-	<div class="slider-wrapper"><!-- innermost wrapper element -->
-		<img src="http://lorempixel.com/1024/400/animals" alt="First" class="slide" /><!-- slides -->
-		<img src="http://lorempixel.com/1024/400/business" alt="Second" class="slide" />
-		<img src="http://lorempixel.com/1024/400/city" alt="Third" class="slide" />
-	</div>
-</div>	
+	<p class="item-1">This is your last chance. After this, there is no turning back.</p>
+
+	<p class="item-2">You take the blue pill - the story ends, you wake up in your bed and believe whatever you want to believe.</p>
+
+	<p class="item-3">You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole goes.</p>
 
 </body>
 </html>
