--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -14,5 +14,29 @@
 
 	<p class="item-3">You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole goes.</p>
 
+	<p class="item-4">test 4</p>
+
+	<p class="item-5">test 5</p>
+
+	<p class="item-6">test 6</p>
+
+	<p class="item-7">test 7</p>
+
+	<p class="item-8">test 8</p>
+
+	<p class="item-9">test 9</p>
+
+	<p class="item-10">test 10</p>
+
+	<p class="item-11">test 11</p>
+
+	<p class="item-12">test 12</p>
+
+	<p class="item-13">test 13</p>
+
+	<p class="item-14">test 14</p>
+
+	<p class="item-15">test 15</p>
+
 </body>
 </html>
