--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer2.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer2.html
@@ -4,7 +4,7 @@
   <title>Kenny Nguyen - Randomizer</title>
 </head>
   <link rel="stylesheet" type="text/css" href="randomizer2designer.css">
-  <link rel="stylesheet" type="text/css" href="randomizer2.js">
+  <link rel="stylesheet" type="text/js" href="randomizer2.js">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Cabin|Dokdo|Josefin+Sans|Lobster|Open+Sans+Condensed:300|Oswald|Ubuntu|Underdog" rel="stylesheet">
 
 <body>
