--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -8,23 +8,14 @@
 
 <body>
 
-	<p class="item-1">This is your last chance. After this, there is no turning back.</p>
+	<p class="item-1">“Be the change that you wish to see in the world.” -Mahatma Gandhi<br><br>
+	"Be the change that you never wish to see in the world." -Gahatma Mandhi</p>
 
-	<p class="item-2">You take the blue pill - the story ends, you wake up in your bed and believe whatever you want to believe.</p>
+	<p class="item-2">"Once you replace negative thoughts with positive ones, you'll start having positive results." -Willie Nelson<br><br>
+	"Once you replace positive thoughts with negative ones, you'll start having positive results." -Nillie Welson</p>
 
-	<p class="item-3">You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole goes.</p>
-
-	<p class="item-4">test 4</p>
-
-	<p class="item-5">test 5</p>
-
-	<p class="item-6">test 6</p>
-
-	<p class="item-7">test 7</p>
-
-	<p class="item-8">test 8</p>
-
-	<p class="item-9">test 9</p>
+	<p class="item-3">“Be yourself; everyone else is already taken.” -Oscar Wilde
+	“Be like everyone else; yourself is already taken.” -Wscar Oilde</p>
 
 </body>
 </html>
