--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -8,14 +8,23 @@
 
 <body>
 
-	<p class="item-1">“Be the change that you wish to see in the world.” -Mahatma Gandhi<br><br>
-	"Be the change that you never wish to see in the world." -Gahatma Mandhi</p>
+	<div class="item-1">
+		<p style="color: white; font-size: 24pt;">“Be the change that you wish to see in the world.” -Mahatma Gandhi</p>
+			<br><br>
+		<p style="color: red; font-size: 24pt;">"Be the change that you never wish to see in the world." -Gahatma Mandhi</p>
+	</div>
 
-	<p class="item-2">"Once you replace negative thoughts with positive ones, you'll start having positive results." -Willie Nelson<br><br>
-	"Once you replace positive thoughts with negative ones, you'll start having positive results." -Nillie Welson</p>
+	<div class="item-2">
+		<p style="color: white; font-size: 24pt;">"Once you replace negative thoughts with positive ones, you'll start having positive results." -Willie Nelson</p>
+			<br><br>
+		<p style="color: red; font-size: 24pt;">"Once you replace positive thoughts with negative ones, you'll start having positive results." -Nillie Welson</p>
+	</div>
 
-	<p class="item-3">“Be yourself; everyone else is already taken.” -Oscar Wilde
-	“Be like everyone else; yourself is already taken.” -Wscar Oilde</p>
+	<div class="item-3">
+		<p style="color: white; font-size: 24pt;">“Be yourself; everyone else is already taken.” -Oscar Wilde</p>
+			<br><br>
+		<p style="color: red; font-size: 24pt;">“Be like everyone else; yourself is already taken.” -Wscar Oilde</p>
+	</div>
 
 </body>
 </html>
