--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -12,18 +12,30 @@
 		<p style="color: white; font-size: 24pt;">“Be the change that you wish to see in the world.” -Mahatma Gandhi</p>
 			<br><br>
 		<p style="color: red; font-size: 24pt;">"Be the change that you never wish to see in the world." -Gahatma Mandhi</p>
+			<br><br>
+		<p style="color: white; font-size: 24pt;">“Believe you can and you're halfway there.” -Theodore Roosevelt</p>
+			<br><br>
+		<p style="color: red; font-size: 24pt;">"Believe you can't. You don't need to get there.” -Rheodore Toosevelt</p>
 	</div>
 
 	<div class="item-2">
 		<p style="color: white; font-size: 24pt;">"Once you replace negative thoughts with positive ones, you'll start having positive results." -Willie Nelson</p>
 			<br><br>
 		<p style="color: red; font-size: 24pt;">"Once you replace positive thoughts with negative ones, you'll start having positive results." -Nillie Welson</p>
+			<br><br>
+		<p style="color: white; font-size: 24pt;">"When you get tired, learn to rest, not quit." -Banksy</p>
+			<br><br>
+		<p style="color: red; font-size: 24pt;">"When you get tired, learn to quit, not rest." -Yanksb</p>
 	</div>
 
 	<div class="item-3">
 		<p style="color: white; font-size: 24pt;">“Be yourself; everyone else is already taken.” -Oscar Wilde</p>
 			<br><br>
 		<p style="color: red; font-size: 24pt;">“Be like everyone else; yourself is already taken.” -Wscar Oilde</p>
+			<br><br>
+		<p style="color: white; font-size: 24pt;">"Life is 10% what happens to us and 90% how we react to it." -Dennis P. Kimbro</p>
+			<br><br>
+		<p style="color: red; font-size: 24pt;">"Life is 100% what happens to us and 0% how we react to it." -Kennis P. Dimbro</p>
 	</div>
 
 </body>
