--- a/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
+++ b/Assignments/KennyNguyen/Randomizer/kennyrandomizer.html
@@ -9,33 +9,33 @@
 <body>
 
 	<div class="item-1">
-		<p style="color: white; font-size: 20pt;">😇 "Be the change that you wish to see in the world." -Mahatma Gandhi</p>
+		<p style="color: white; font-size: 20pt;"><b>😇 "Be the change that you wish to see in the world." -Mahatma Gandhi</b></p>
 			<br><br>
-		<p style="color: red; font-size: 20pt;">😈 "Be the change that you never wish to see in the world." -Gahatma Mandhi</p>
+		<p style="color: red; font-size: 20pt;"><b>😈 "Be the change that you never wish to see in the world." -Gahatma Mandhi</b></p>
 			<br><br>
-		<p style="color: white; font-size: 20pt;">😇 "Believe you can and you're halfway there." -Theodore Roosevelt</p>
+		<p style="color: white; font-size: 20pt;"><b>😇 "Believe you can and you're halfway there." -Theodore Roosevelt</b></p>
 			<br><br>
-		<p style="color: red; font-size: 20pt;">😈 "Believe you can't. You don't need to get there.” -Rheodore Toosevelt</p>
+		<p style="color: red; font-size: 20pt;"><b>😈 "Believe you can't. You don't need to get there.” -Rheodore Toosevelt</b></p>
 	</div>
 
 	<div class="item-2">
-		<p style="color: white; font-size: 20pt;">😇 "Once you replace negative thoughts with positive ones, you'll start having positive results." -Willie Nelson</p>
+		<p style="color: white; font-size: 20pt;"><b>😇 "Once you replace negative thoughts with positive ones, you'll start having positive results." -Willie Nelson</b></p>
 			<br><br>
-		<p style="color: red; font-size: 20pt;">😈 "Once you replace positive thoughts with negative ones, you'll start having positive results." -Nillie Welson</p>
+		<p style="color: red; font-size: 20pt;"><b>😈 "Once you replace positive thoughts with negative ones, you'll start having positive results." -Nillie Welson</b></p>
 			<br><br>
-		<p style="color: white; font-size: 20pt;">😇 "When you get tired, learn to rest, not quit." -Banksy</p>
+		<p style="color: white; font-size: 20pt;"><b>😇 "When you get tired, learn to rest, not quit." -Banksy</b></p>
 			<br><br>
-		<p style="color: red; font-size: 20pt;">😈 "When you get tired, learn to quit, not rest." -Yanksb</p>
+		<p style="color: red; font-size: 20pt;"><b>😈 "When you get tired, learn to quit, not rest." -Yanksb</b></p>
 	</div>
 
 	<div class="item-3">
-		<p style="color: white; font-size: 20pt;">😇 "Be yourself; everyone else is already taken." -Oscar Wilde</p>
+		<p style="color: white; font-size: 20pt;"><b>😇 "Be yourself; everyone else is already taken." -Oscar Wilde</b></p>
 			<br><br>
-		<p style="color: red; font-size: 20pt;">😈 "Be like everyone else; yourself is already taken." -Wscar Oilde</p>
+		<p style="color: red; font-size: 20pt;"><b>😈 "Be like everyone else; yourself is already taken." -Wscar Oilde</b></p>
 			<br><br>
-		<p style="color: white; font-size: 20pt;">😇 "Life is 10% what happens to us and 90% how we react to it." -Dennis P. Kimbro</p>
+		<p style="color: white; font-size: 20pt;"><b>😇 "Life is 10% what happens to us and 90% how we react to it." -Dennis P. Kimbro</b></p>
 			<br><br>
-		<p style="color: red; font-size: 20pt;">😈 "Life is 100% what happens to us and 0% how we react to it." -Kennis P. Dimbro</p>
+		<p style="color: red; font-size: 20pt;"><b>😈 "Life is 100% what happens to us and 0% how we react to it." -Kennis P. Dimbro</b></p>
 	</div>
 
 </body>
