--- a/Assignments/StevenCanoy/randomizer/index.html
+++ b/Assignments/StevenCanoy/randomizer/index.html
@@ -18,8 +18,8 @@
           
         </div>
 
-        <button type="addMoreButton" id="addMoreButton">add more</button>
-        <button type="button" id="randButton" class="randomizerButton">Click to Randomize</button>
+        <button type="addMoreButton" id="addMoreButton">DO MORE.</button>
+        <button type="button" id="randButton" class="randomizerButton">Get Sweaty!</button>
       </div>
 
     </div>
