--- a/Assignments/SophiaMartinez/3- drawing machine/index.html
+++ b/Assignments/SophiaMartinez/3- drawing machine/index.html
@@ -7,12 +7,25 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
   <script src="sketch.js"></script> <!-- moved this line from body to head? -->
-
+<style>
+div.b {
+  position: relative;
+  left: auto;
+  width: 100px;
+  height: 120px;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 25px;
+}
+</style>
 </head>
 
 <body>
-  <h1> Drawing Machine</h1>
-  <p>Hit "s" to save image</p>
+
+<div class="b">Drawing Machine</div>
+<br>
+<div>Hit "s" to save image. <br>
+Hit "d" to peek at your drawing.</div>
 
 </body>
 
