--- a/Assignments/UyenHuynh/3.6/index.html
+++ b/Assignments/UyenHuynh/3.6/index.html
@@ -8,10 +8,12 @@
 
   </head>
   <body>
-   
-  <h1>Drawing maching</h1>
-  <p>Hit 's' to save canvas</p>
-  <p>Hit 'd' to display image</p>
-  <p>Hit 'c' to clear</p>
+   <div class="instruction"> 
+    <h1>Drawing machine</h1>
+    <p>Hit 's' to save canvas</p>
+    <p>Hit 'd' to display image</p>
+    <p>Hit 'c' to clear</p>
+   </div>
+
 
 </body></html>
