--- a/Assignments/RobertChavez/3.6 rcdrawingmachine/index.html
+++ b/Assignments/RobertChavez/3.6 rcdrawingmachine/index.html
@@ -6,9 +6,11 @@
     <script src="sketch.js"></script>
   </head>
   <body>
+    <h1>angels are real</h1>
+    <h3>click and drag to draw a dog</h3>
     <h1>Drawing machine</h1>
-    <h3>hit 'd' to display </h3>
-    <h3>hit 's' to save </h3>
+    <h3>hit 'd' to display dog</h3>
+    <h3>hit 's' to dog</h3>
 
 
 
