--- a/Assignments/DanielPerezGomez/3.0/index.html
+++ b/Assignments/DanielPerezGomez/3.0/index.html
@@ -3,10 +3,11 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <script src="sketch.js"></script>
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <h1 style="text-align: center;">Drawing Machine</h1>
+    <p style="text-align: center;">Press 's' key to save image</p>
   
 
 </body></html>
