--- a/Assignments/DanielPerezGomez/3.0/index.html
+++ b/Assignments/DanielPerezGomez/3.0/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1 style="text-align: center;">Drawing Machine</h1>
-    <p style="text-align: center;">Press 's' key to save image</p>
+    <h3 style="text-align: center;">Press 's' key to save image</h3>
+    <h3 style="text-align: center;">Press 'd' key to display image</h3>
   
 
 </body></html>
