--- a/Assignments/DanielPerezGomez/3.0/index.html
+++ b/Assignments/DanielPerezGomez/3.0/index.html
@@ -6,9 +6,9 @@
     <script src="sketch.js"></script>
   </head>
   <body>
-    <h1 style="text-align: center;">Drawing Machine</h1>
-    <h3 style="text-align: center;">Press 's' key to save image</h3>
-    <h3 style="text-align: center;">Press 'd' key to display image</h3>
+    <h1>Drawing Machine</h1>
+    <h3>Press 's' key to save image</h3>
+    <h3>Press 'd' key to display image</h3>
   
 
 </body></html>
