--- a/Assignments/MadisonMcNamara/drawing_machine/index.html
+++ b/Assignments/MadisonMcNamara/drawing_machine/index.html
@@ -10,5 +10,5 @@
 
 <h1>Drawing Machine</h1>
 
-<p>Press S to save image</p>
+<p>Press S to save image, D to reveal image, C to clear image</p>
 </body></html>
