--- a/Assignments/UyenHuynh/drawingmachine/index.html
+++ b/Assignments/UyenHuynh/drawingmachine/index.html
@@ -1,19 +1,29 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-    <script src="sketch.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <script src="p5.js"></script>
+  <script src="p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <style>
+    body {
+      background-color: rgb(226, 246, 253);
+    }
+  </style>
+
+</head>
+
+<body>
+  <div class="title">
+    <a href="./index.html">
+      <h1>Doodle Space</h1>
+    </a>
+    <a href="./draw.html">
+      <button class="button">Start here</button>      
+  </div>
 
 
-  </head>
-  <body>
-   <div class="instruction"> 
-    <h1>Drawing machine</h1>
-    <p>Hit 's' to save canvas</p>
-    <p>Hit 'd' to display image</p>
-    <p>Hit 'c' to clear</p>
-   </div>
+</body>
 
-
-</body></html>
+</html>
