--- a/Assignments/ElizabethClawson/Drawing Machine/index.html
+++ b/Assignments/ElizabethClawson/Drawing Machine/index.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
 
-  </head>
-  <body>
-    <script src="sketch.js"></script>
-  
+<head>
+  <script src="p5.js"></script>
+  <script src="p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
 
-</body></html>
+</head>
+<script src="sketch.js"></script>
+
+<body>
+  <h1>Drawing Machine</h1>
+  <h3>Press "d" to display</h3>
+  <h3>Press "s" to save</h3>
+
+
+</body>
+<div class="canvasDiv" id="canvasDiv">
+
+</div>
+<div class="" id="controlsDiv">
+<button type="button" id="genButton">Double-click for Prompt</button>
+
+</html>
