--- a/Assignments/KennyNguyen/Drawing Machine/index.html
+++ b/Assignments/KennyNguyen/Drawing Machine/index.html
@@ -10,7 +10,9 @@
 
   <body>
     <h1>Drawing Machine 2021</h1>
-    <p>Click on 'S' to save your drawing</p>
+    <h2>Click on 'A' to display your image</h2>
+    <h3>Click on 'S' to save your drawing</h3>
+    <p style="font-size: 15pt;">click and drag left mouse button to draw</p>
   </body>
 
 </html>
