--- a/Assignments/KennyNguyen/Drawing Machine/index.html
+++ b/Assignments/KennyNguyen/Drawing Machine/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Drawing Machine 2021</h1>
     <h3>Click on 'S' to save your drawing</h3>
-    <p style="font-size: 15pt;">click and drag left mouse button to draw</p>
+    <p style="font-size: 15pt;">left-click and drag to draw</p>
   </body>
 
 </html>
