--- a/Assignments/KennyNguyen/Drawing Machine/index.html
+++ b/Assignments/KennyNguyen/Drawing Machine/index.html
@@ -9,9 +9,9 @@
 </head>
 
   <body>
-    <h1>Drawing Machine 2021</h1>
-    <h3>Click on 'S' to save your drawing</h3>
-    <p style="font-size: 15pt;">left-click and drag to draw</p>
+    <h1 style="color: #e30039;">Drawing Machine - Mirror Maze 2021</h1>
+    <h3 style="color: #3240a8;">Click on 'S' to save your drawing</h3>
+    <p style="font-size: 15pt; color: #3240a8;">left-click and drag to draw</p>
   </body>
 
 </html>
