--- a/Assignments/UyenHuynh/drawingmachine/draw.html
+++ b/Assignments/UyenHuynh/drawingmachine/draw.html
@@ -6,21 +6,28 @@
   <script src="p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
-  
+
 </head>
 
 <body>
-  <div class="title">
-    <a href="./index.html"><h1>Doodle Space</h1></a>
-  </div>  
-    <div class="instructions"
-    <h4><strong>Instructions:</strong></h4>
-    <p>Click on the 'refresh' button to get a drawing prompt</p>
-    <p>Hit 's' to save canvas</p>
-    <p>Hit 'c' to clear</p>
-  </div>
-  <div class="randomized-text">
-
+  <div class="top-container">
+    <div class="instructions-container">
+      <div class="instructions">
+        <h3><strong>Instructions:</strong></h3>
+        <p>Click on the 'refresh' button to get a drawing prompt</p>
+        <p>Hit 's' to save canvas</p>
+        <p>Hit 'c' to clear</p>
+      </div>
+    </div>
+    <div class="title">
+      <div>
+        <a href="./index.html">
+          <h1>Doodle Space</h1>
+        </a>
+      </div>
+      <button class="refresh-button">REFRESH</button>
+      <div class="randomized-text" />
+    </div>
   </div>
   <script src="sketch.js"></script>
 
