--- a/Assignments/UyenHuynh/drawingmachine/index.html
+++ b/Assignments/UyenHuynh/drawingmachine/index.html
@@ -20,7 +20,7 @@
       <h1>Doodle Space</h1>
     </a>
     <a href="./draw.html">
-      <button class="button">Start here</button>      
+      <button class="refresh-button">Start here</button>      
   </div>
 
 
