--- a/Assignments/AmandaCarrillo/3.6/index.html
+++ b/Assignments/AmandaCarrillo/3.6/index.html
@@ -14,8 +14,10 @@
     <h1>Drawing Machine</h1>
   </center>
   <center>
-
-  <h3>Hit 'D' to display image</h3>
+    <h3>click and drag to draw</h3>
+  </center>
+  <center>
+    <h3>Hit 'D' to display image</h3>
     <h3>Hit 'S' to save drawing</h3>
   </center>
 
