--- a/Assignments/HaomiaoWang/3.0/index.html
+++ b/Assignments/HaomiaoWang/3.0/index.html
@@ -6,26 +6,20 @@
   <script src="p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
-  <script src="sketch.js"></script> <!-- moved this line from body to head? -->
-<style>
-div.b {
-  position: relative;
-  left: auto;
-  width: 100px;
-  height: 120px;
-  font-family: monospace;
-  font-weight: bold;
-  font-size: 25px;
-}
-</style>
+  <script src="sketch.js"></script>
+
 </head>
 
 <body>
 
-<div class="b">Drawing Machine</div>
-<br>
-<div>Hit "s" to save image. <br>
-Hit "d" to peek at your drawing.</div>
+<h3>Drawing Machine</h3>
+
+
+
+<h1>Hit "s" to save image. </h1>
+<h1>Hit "d" to peek at your drawing.<h1>
+
+
 
 </body>
 
