--- a/Assignments/HaomiaoWang/3.6/index.html
+++ b/Assignments/HaomiaoWang/3.6/index.html
@@ -6,7 +6,7 @@
   <script src="p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
-  <script src="sketch.js"></script> 
+  <script src="sketch.js"></script>
 <style>
 div.f {
   position: relative;
@@ -16,15 +16,18 @@ div.f {
   font-family: monospace;
   font-weight: bold;
   font-size: 24px;
+  color: '#8080ff';
 }
 </style>
 </head>
 
 <body>
 
-<div class="f">Drawing Machine</div>
+<div class="f">Momo's Drawing Machine</div>
 <br>
 
+<div>Draw anything you like in the dark!</div>
+  <br>
 <div>Hit "s" to save image. <br>
 Hit "d" to peek at your drawing.</div>
 
