--- a/Assignments/UyenHuynh/drawingmachine/draw.html
+++ b/Assignments/UyenHuynh/drawingmachine/draw.html
@@ -15,17 +15,27 @@
       <div class="instructions">
         <h3><strong>Instructions:</strong></h3>
         <p>Click on the 'refresh' button to get a drawing prompt</p>
-        <p>Hit 's' to save canvas</p>
-        <p>Hit 'c' to clear</p>
+
+        </div>
+    </div>
+    <div class="instructions-container">
+      <div class="instructions">
+        <p> <strong> Hot keys </strong> </p>
+        <p>d: draw</p>
+        <p>e: erase stroke</p>
+        <p>c: clear canvas</p>
+        <p>s: Save canvas</p>
+        <p>Ctrl + Z : Undo 1 ( 1 step only )</p>
+
       </div>
     </div>
     <div class="title">
       <div>
         <a href="./index.html">
-          <h1>Doodle Space</h1>
+          <h1>Doodling Space</h1>
         </a>
       </div>
-      <button class="refresh-button">REFRESH</button>
+      <button class="refresh-button">Refresh</button>
       <div class="randomized-text" />
     </div>
   </div>
