--- a/Assignments/UyenHuynh/drawingmachine/draw.html
+++ b/Assignments/UyenHuynh/drawingmachine/draw.html
@@ -25,7 +25,7 @@
         <p>e: erase stroke</p>
         <p>c: clear canvas</p>
         <p>s: Save canvas</p>
-        <p>Ctrl + Z : Undo 1 ( 1 step only )</p>
+        <p>Ctrl + Z : Undo (1 step only )</p>
 
       </div>
     </div>
