--- a/Assignments/UyenHuynh/drawingmachine/index.html
+++ b/Assignments/UyenHuynh/drawingmachine/index.html
@@ -19,7 +19,7 @@
       <h1>Artist's block</h1>
     <a href="./draw.html">
       <button class="refresh-button">Start here</button></a> 
-      <h4>Having an artist's block? <br>Click on the button to get some inspiration for your art</h4>
+      <h4>Having an artist's block? <br>Click on the button to get some inspirations for your art</h4>
       <img src="artist.png" alt="Artist">
 
   </div>
