--- a/Assignments/ElizabethClawson/Drawing Machine/index.html
+++ b/Assignments/ElizabethClawson/Drawing Machine/index.html
@@ -11,9 +11,9 @@
 <script src="sketch.js"></script>
 
 <body>
-  <h1>Drawing Machine</h1>
-  <h3>Press "d" to display</h3>
-  <h3>Press "s" to save</h3>
+  <h1 style="background-color:lightgreen;text-align:center">Diggin Time</h1>
+  <!-- <h3 style="background-color:tomato;text-align:center">Press "d" to display</h3> -->
+  <h3 style="background-color:brown;text-align:center">Press "s" to save</h3>
 
 
 </body>
@@ -21,6 +21,6 @@
 
 </div>
 <div class="" id="controlsDiv">
-<button type="button" id="genButton">Double-click for Prompt</button>
+  <button type="button" id="genButton">Double-click to reset</button>
 
 </html>
