--- a/Assignments/SophiaMartinez/3.0/index.html
+++ b/Assignments/SophiaMartinez/3.0/index.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <script src="sketch.js"></script> <!-- moved this line from body to head? -->
 <style>
+
 div.b {
   position: relative;
   left: auto;
@@ -22,10 +23,11 @@ div.b {
 
 <body>
 
-<div class="b">Drawing Machine</div>
+<div class="b">healing thoughts</div>
 <br>
-<div>Hit "s" to save image. <br>
-Hit "d" to peek at your drawing.</div>
+<h3>Click and drag to draw one nice thing you can think of from the top of your head</h3>
+<p>Hit "s" to save that thought.</p>
+
 
 </body>
 
