--- a/Assignments/SophiaMartinez/3.0/index.html
+++ b/Assignments/SophiaMartinez/3.0/index.html
@@ -8,7 +8,12 @@
   <meta charset="utf-8">
   <script src="sketch.js"></script> <!-- moved this line from body to head? -->
 <style>
-
+body  {
+  background-image: url("images/beach.gif");
+  background-color:  #ebcfa9;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 div.b {
   position: relative;
   left: auto;
