--- a/Assignments/SophiaMartinez/3.0/index.html
+++ b/Assignments/SophiaMartinez/3.0/index.html
@@ -8,30 +8,26 @@
   <meta charset="utf-8">
   <script src="sketch.js"></script> <!-- moved this line from body to head? -->
 <style>
+
 body  {
-  background-image: url("images/beach.gif");
+  background-image: url("media/beach.gif");
   background-color:  #ebcfa9;
   background-repeat: no-repeat;
   background-size: cover;
-}
-div.b {
-  position: relative;
-  left: auto;
-  width: 100px;
-  height: 120px;
-  font-family: monospace;
-  font-weight: bold;
-  font-size: 25px;
+
 }
 </style>
 </head>
 
 <body>
 
-<div class="b">healing thoughts</div>
+<h1> Thoughts in the sand </h1>
 <br>
-<h3>Click and drag to draw one nice thing you can think of from the top of your head</h3>
-<p>Hit "s" to save that thought.</p>
+<h3>I enjoy the serenity of the beach, and watching the ocean waves calmly roll on and off shore.
+<br> Draw what comes to mind in the sand, and let the waves wash them away
+</h3>
+<p>Press "s" to save that thought.
+<br>Press "c" to start over. </p>
 
 
 </body>
