--- a/Assignments/AlexandraHisen/3.10/index.html
+++ b/Assignments/AlexandraHisen/3.10/index.html
@@ -13,9 +13,10 @@
 
 
 <body>
-<h1> Drawing machine</h1>
+<h1> Drawing machine! Quick Draw A Face! </h1>
 <h3> hit 's' to save image </h3>
 <h3> hit 'c' to clear canvas </h3>
+
 
 </body>
 
