--- a/Assignments/MadisonMcNamara/drawing_machine/index.html
+++ b/Assignments/MadisonMcNamara/drawing_machine/index.html
@@ -8,7 +8,7 @@
   <body>
     <script src="sketch.js"></script>
 
-<h1>Drawing Machine</h1>
+<h1>Connect the Dots!</h1>
 
 <p>Press S to save image, D to reveal image, C to clear image</p>
 </body></html>
