--- a/Assignments/KennyNguyen/Drawing Machine/index.html
+++ b/Assignments/KennyNguyen/Drawing Machine/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1 style="color: #e30039;">Drawing Machine - Mirror Maze 2021</h1>
     <h3 style="color: #3240a8;">Click on 'S' to save your drawing</h3>
+    <h4 style="color: #3240a8;">Click on 'C' to clear your drawing</h4>
     <p style="font-size: 15pt; color: #3240a8;">left-click and drag to draw</p>
   </body>
 
