--- a/Assignments/JackieNguyen/Drawing Machine/index.html
+++ b/Assignments/JackieNguyen/Drawing Machine/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <h1>Try To Draw A Butterfly</h1>
-  <h3>click and drag to draw a butterfly</h3>
-  <h3>hit 'd'  to display butterfly</h3>
-  <h3>hit 's' to save butterfly</h3>
+  <h1>Try To Draw Some Clothes</h1>
+  <h3>click and drag to draw clothes</h3>
+  <h3>hit 'd'  to display clothes</h3>
+  <h3>hit 's' to save clothes</h3>
 
 
 </body>
