idk what happened but the drawing is there!!

--- a/Assignments/SophiaMartinez/3.0/index.html
+++ b/Assignments/SophiaMartinez/3.0/index.html
@@ -10,7 +10,7 @@
 <style>
 
 body  {
-  /* background-image: url("media/beach.gif"); */
+  background-image: url("media/beach.gif");
   background-color:  #ebcfa9;
   background-repeat: no-repeat;
   background-size: cover;
