--- a/Assignments/UyenHuynh/drawingmachine/index.html
+++ b/Assignments/UyenHuynh/drawingmachine/index.html
@@ -19,7 +19,10 @@
       <h1>Artist's block</h1>
     <a href="./draw.html">
       <button class="refresh-button">Start here</button></a> 
-      <h4>Having an artist's block? <br>Click on the button to get some inspirations for your art</h4>
+            <p> <strong> What is this?</strong><br>As someone who likes to draw, sometimes I have the artist's block. I need some drawing prompts. <br>
+        This is the project that generates some drawing prompts randomly. It is made for people who like some new and interesting challenges and inspirations for their artwork!<br>
+      There's no rule to draw the prompts. These prompts are just made for you to spread your creativity.<br>
+    Click "Start here" to explore! </p>
       <img src="artist.png" alt="Artist">
 
   </div>
