--- a/Assignments/JackieNguyen/Drawing Machine/index.html
+++ b/Assignments/JackieNguyen/Drawing Machine/index.html
@@ -12,8 +12,8 @@
 <body>
   <h1>Try To Draw Some Clothes</h1>
   <h3>click and drag to draw clothes</h3>
-  <h3>hit 'd'  to display clothes</h3>
-  <h3>hit 's' to save clothes</h3>
+  <h3>hit 'd'  to display</h3>
+  <h3>hit 's' to save</h3>
 
 
 </body>
