--- a/Assignments/HaomiaoWang/3.14/index.html
+++ b/Assignments/HaomiaoWang/3.14/index.html
@@ -26,11 +26,13 @@ div.f {
 <div class="f">Momo's Drawing Machine  </div>
 <br>
 
-<div></div>
-  <br>
+
 <div>Hit "s" to save image. <br>
 Hit "c" to clear your drawing.<br>
-Hit "b" to show the sktech you make without the mirror one</div>
+Hit "b" to show the last sktech you make and filled it.<br>
+<div>   </div><br>
+<button type="button" onclick="window.location.reload();">again!</button>
+</div>
 
 
 </body>
