--- a/Assignments/StevenCanoy/drawmachine/index.html
+++ b/Assignments/StevenCanoy/drawmachine/index.html
@@ -6,8 +6,9 @@
     <script src="sketch.js"></script>
   </head>
   <body>
-    <h1>Draw Machine</h1>
-    <h3>Drag and Draw with a mouse or trackpad</h3>
+    <h1>Tube Tunnels</h1>
+    <h3>Click and drag to draw with a mouse or trackpad</h3>
+    <h3>Create your own 3D tunnel wallpaper</h3>
     <h3>Hit 'c' to clear image</h3>
     <h3>Hit 's' to save image</h3>
   
