--- a/Assignments/RobertChavez/rcfinaldm/index.html
+++ b/Assignments/RobertChavez/rcfinaldm/index.html
@@ -12,6 +12,7 @@
     <h1>Welcome to the LIGHT SHOW 101!</h1>
     <h3>Move the Mouse around</h3>
     <h1>For Appealing Patterns!</h1>
+      <h3>change the stroke size by pressing 0-5</h3>
   <h3>hit 's' to save your pattern</h3>
 
 
