--- a/Assignments/SophiaMartinez/3.14/index.html
+++ b/Assignments/SophiaMartinez/3.14/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <h1> 3.10 - Alpha (transparency) trails and Perlin noise</h1>
+  <h1> 3.14 - nested for loops</h1>
   <br>
   <h3>Attempting fun features!!
   </h3>
