--- a/Assignments/StevenCanoy/5.5/index.html
+++ b/Assignments/StevenCanoy/5.5/index.html
@@ -3,10 +3,12 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-    <script src="sketch.js"></script>
+    
   </head>
   <body>
-   
+    <script src="sketch.js"></script>
+    <script src="player.js"></script>
+    <script src="coin.js"></script>
    
   
 
