--- a/Assignments/KennyNguyen/New Final Project/index.html
+++ b/Assignments/KennyNguyen/New Final Project/index.html
@@ -9,5 +9,6 @@
     <script src="sketch.js"></script>
     <script src="player.js"></script>
     <script src="coins.js"></script>
+    <script src="missiles.js"></script>
 
 </body></html>
