--- a/Assignments/KennyNguyen/New Final Project/index.html
+++ b/Assignments/KennyNguyen/New Final Project/index.html
@@ -10,5 +10,6 @@
     <script src="player.js"></script>
     <script src="coins.js"></script>
     <script src="missiles.js"></script>
+    <script src="lazers.js"></script>
 
 </body></html>
