--- a/Assignments/KennyNguyen/New Final Project/index.html
+++ b/Assignments/KennyNguyen/New Final Project/index.html
@@ -11,5 +11,6 @@
     <script src="coins.js"></script>
     <script src="missiles.js"></script>
     <script src="lazers.js"></script>
+    <script src="projectiles.js"></script>
 
 </body></html>
