--- a/Assignments/StevenCanoy/poseNet/index.html
+++ b/Assignments/StevenCanoy/poseNet/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
+  <!-- Load TensorFlow.js -->
+  <!-- <script src="https://unpkg.com/@tensorflow/tfjs@0.11.7/dist/tf.min.js"></script> -->
+    
+  <!-- Load Posenet -->
+      <!-- <script src="https://unpkg.com/@tensorflow-models/posenet@0.1.2/dist/posenet.min.js"></script> -->
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <script src="ml5.min.js"></script>
@@ -10,4 +15,8 @@
     <script src="sketch.js"></script>
   </head><body>
 
-</body></html>
+</body>
+<script>
+   
+</script>
+</html>
