--- a/Assignments/KennyNguyen/New Final Project/index.html
+++ b/Assignments/KennyNguyen/New Final Project/index.html
@@ -3,7 +3,8 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <title>Infinite Warfare - KN</title>
+    <link rel="icon" href="/assets/icon.png">
   </head>
   <body>
     <script src="sketch.js"></script>
