--- a/Assignments/KennyNguyen/New Final Project/index.html
+++ b/Assignments/KennyNguyen/New Final Project/index.html
@@ -7,8 +7,8 @@
 
   </head>
 
-    <link rel="icon" href="/assets/icon.png">
-    
+    <link rel="icon" href="assets/icon.png">
+
   <body>
     <script src="sketch.js"></script>
     <script src="player.js"></script>
