--- a/Assignments/AmandaCarrillo/3.16/index.html
+++ b/Assignments/AmandaCarrillo/3.16/index.html
@@ -14,9 +14,10 @@
     <h1>Scratch and Sketch</h1>
   </center>
   <center>
-    <h2>click and drag to draw</h3>
+    <h2>Hover to draw</h3>
   </center>
   <center>
+    <h3>Click to clear canvas</h3>
     <h3>Hit 'S' to save drawing</h3>
   </center>
 
