--- a/Assignments/AlexandraHisen/4.0/index.html
+++ b/Assignments/AlexandraHisen/4.0/index.html
@@ -9,5 +9,7 @@
     <script src="sketch.js"></script>
     <script src="player.js"></script>
     <script src="coins.js"></script>
-
+    <script src="enemies.js"></script>
+    <script src="boost.js"></script>
+    <script src="bomb.js"></script>
 </body></html>
