Added shoofly game

--- a/Assignments/StevenCanoy/Game/index.html
+++ b/Assignments/StevenCanoy/Game/index.html
@@ -6,11 +6,11 @@
     <script src="sketch.js"></script>
   </head>
   <body>
-    <h1>Tube Tunnels</h1>
-    <h3>Click and drag to draw with a mouse or trackpad</h3>
-    <h3>Create your own 3D tunnel wallpaper</h3>
-    <h3>Hit 'c' to clear image</h3>
-    <h3>Hit 's' to save image</h3>
+    <h1>Shoo Fly!</h1>
+    <h3>Move the mouse over the fly to shoo it away.</h3>
+    <h3>If you can't see the fly, it might be hiding near the edges.</h3>
+    <h3>FLASH WARNING ON LEVEL 5</h3>
+    <h3>25pts to Win!</h3>
   
 
 </body></html>
