--- a/Assignments/AlexandraHisen/4.0/index.html
+++ b/Assignments/AlexandraHisen/4.0/index.html
@@ -12,4 +12,10 @@
     <script src="enemies.js"></script>
     <script src="boost.js"></script>
     <script src="bomb.js"></script>
+
+  </head>
+  <body>
+    <!-- <h1><img src="complex_honeycomb"></h1> -->
+
+
 </body></html>
