--- a/Assignments/HaomiaoWang/final1/index.html
+++ b/Assignments/HaomiaoWang/final1/index.html
@@ -10,6 +10,9 @@
     <script src="sketch.js"></script>
     <script src="player.js"></script>
     <script src="slime.js"></script>
+    <script src="bslime.js"></script>
+    <script src="lives.js"></script>
+
 
 
 
