--- a/Assignments/SophiaMartinez/Game/index.html
+++ b/Assignments/SophiaMartinez/Game/index.html
@@ -6,8 +6,12 @@
   <script src="p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
-  <script src="sketch.js"></script> <!-- moved this line from body to head? -->
+
 
 </head>
+<body>
+  <script src="sketch.js"></script>
+  <script src="player.js"></script>
+  <script src="points.js"></script>
 
 </html>
