--- a/Assignments/SophiaMartinez/Game/index.html
+++ b/Assignments/SophiaMartinez/Game/index.html
@@ -8,10 +8,19 @@
   <meta charset="utf-8">
 
 
+
 </head>
 <body>
+
   <script src="sketch.js"></script>
   <script src="player.js"></script>
   <script src="points.js"></script>
+<div>
+    <h3> Catch all the falling star dust so Chunky Star won't overeat!</h3>
+    <!-- <img src="images4game/gluttony.png" alt="chunko" style="width:50%" > -->
+</div>
+
+</body>
+
 
 </html>
